# python-package-template

./: README.md  README_TEMPLATE.md  setup.cfg
scripts/: build.sh  install.sh  publish.sh  setup.sh
