[metadata]
name = <package-name>
version = attr: <package-path>.__version__
url = https://github.com/<github-username>/<package-name>
project_urls = 
    Homepage = https://github.com/<github-username>/<package-name>
    Changelog = https://github.com/<github-username>/<package-name>/releases
    Source = https://github.com/<github-username>/<package-name>
    Issue Tracker = https://github.com/<github-username>/<package-name>/issues
    # Documentation = https://github.com/<github-username>/<package-name>
author = <author>
author_email = <email>
# "Trove classifiers" for PyPI (https://pypi.org/classifiers/).
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3
license_files = LICENSE
description = <description>
long_description = file: README.md
long_description_content_type = text/markdown
keywords = <keywords>

[options]
install_requires = 

python_requires = >=3.6
packages = find:


[options.packages.find]
exclude =
    tests
    *.tests.*

[black]
line-length = 88

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203,E701,E501
